--- a/Decision_Tree.html
+++ b/Decision_Tree.html
@@ -33,7 +33,8 @@
   </head>
   <body>
     <div id="container">
-      <h2>Enhanced Custom Decision Tree for Iris Species</h2>
+      <h1>Enhanced Custom Decision Tree for Iris Species</h1>
+      <h2>Vizualizing Decision Tree Decision Regions (Depth=3)</h2>
       <canvas id="decisionTreeCanvas" width="400" height="400"></canvas>
       <div id="controls">
         <label for="sepalLength"
