--- a/Decision_Tree.html
+++ b/Decision_Tree.html
@@ -8,34 +8,51 @@
     </title>
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Roboto", sans-serif;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         margin: 0;
-        background-color: #f0f0f0;
+        background: linear-gradient(135deg, #ece9e6, #ffffff);
       }
       #container {
         text-align: center;
+        background-color: #ffffff;
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
       }
       canvas {
-        border: 1px solid #000;
-        background-color: #fff;
+        border: 2px solid #000;
+        border-radius: 8px;
+        background-color: #fafafa;
+        margin-top: 20px;
       }
       #controls {
         margin-top: 20px;
       }
-      input {
-        width: 150px;
+      label {
+        font-size: 1.2em;
+        color: #333;
+      }
+      input[type="range"] {
+        width: 80%;
+        margin: 10px 0;
+      }
+      #result {
+        font-size: 1.4em;
+        margin-top: 15px;
+        color: #444;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
     <div id="container">
       <h1>Enhanced Custom Decision Tree for Iris Species</h1>
-      <h2>Vizualizing Decision Tree Decision Regions (Depth=3)</h2>
-      <canvas id="decisionTreeCanvas" width="400" height="400"></canvas>
+      <h2>Visualizing Decision Tree Decision Regions (Depth=3)</h2>
+      <canvas id="decisionTreeCanvas" width="500" height="500"></canvas>
       <div id="controls">
         <label for="sepalLength"
           >Sepal Length: <span id="sepalLengthValue">5.5</span> cm</label
@@ -73,10 +90,10 @@
       const resultText = document.getElementById("result");
 
       function drawDecisionRegions() {
-        for (let x = 0; x < 400; x++) {
-          for (let y = 0; y < 400; y++) {
-            const sepalLength = x / 100 + 4; // scaling for sepal length
-            const sepalWidth = 4.5 - y / 200; // scaling for sepal width
+        for (let x = 0; x < 500; x++) {
+          for (let y = 0; y < 500; y++) {
+            const sepalLength = x / 125 + 4; // scaling for sepal length
+            const sepalWidth = 4.5 - y / 222.22; // scaling for sepal width
             const species = classifyIris(sepalLength, sepalWidth);
             ctx.fillStyle = getColor(species);
             ctx.fillRect(x, y, 1, 1);
@@ -87,48 +104,49 @@
       function getColor(species) {
         switch (species) {
           case "Setosa":
-            return "rgba(255, 0, 0, 0.5)"; // Red for Setosa
+            return "rgba(255, 99, 132, 0.6)"; // Light Red for Setosa
           case "Versicolor":
-            return "rgba(0, 255, 0, 0.5)"; // Green for Versicolor
+            return "rgba(75, 192, 192, 0.6)"; // Light Green for Versicolor
           case "Virginica":
-            return "rgba(0, 0, 255, 0.5)"; // Blue for Virginica
+            return "rgba(54, 162, 235, 0.6)"; // Light Blue for Virginica
           default:
             return "#fff";
         }
       }
 
       function drawAxes() {
-        ctx.strokeStyle = "#000";
+        ctx.strokeStyle = "#333";
+        ctx.lineWidth = 2;
         ctx.beginPath();
-        ctx.moveTo(0, 400);
-        ctx.lineTo(400, 400);
-        ctx.moveTo(0, 400);
-        ctx.lineTo(0, 0);
+        ctx.moveTo(0, 500);
+        ctx.lineTo(500, 500);
+        ctx.moveTo(0, 0);
+        ctx.lineTo(0, 500);
         ctx.stroke();
 
-        ctx.fillStyle = "#000";
-        ctx.font = "12px Arial";
+        ctx.fillStyle = "#333";
+        ctx.font = "14px Roboto";
         for (let i = 4; i <= 8; i++) {
-          const x = (i - 4) * 100;
-          ctx.fillText(i, x, 415);
+          const x = (i - 4) * 125;
+          ctx.fillText(i, x - 10, 520);
         }
         for (let i = 2; i <= 4.5; i += 0.5) {
-          const y = 400 - (i - 2) * 200;
-          ctx.fillText(i.toFixed(1), -25, y);
+          const y = 500 - (i - 2) * 222.22;
+          ctx.fillText(i.toFixed(1), -35, y + 5);
         }
 
-        ctx.font = "14px Arial";
-        ctx.fillText("Sepal Length (cm)", 150, 430);
+        ctx.font = "16px Roboto";
+        ctx.fillText("Sepal Length (cm)", 180, 540);
         ctx.save();
         ctx.rotate(-Math.PI / 2);
-        ctx.fillText("Sepal Width (cm)", -250, 20);
+        ctx.fillText("Sepal Width (cm)", -320, 20);
         ctx.restore();
       }
 
       function drawPoint(x, y) {
         ctx.fillStyle = "#000";
         ctx.beginPath();
-        ctx.arc(x, y, 5, 0, 2 * Math.PI);
+        ctx.arc(x, y, 6, 0, 2 * Math.PI);
         ctx.fill();
       }
 
@@ -167,8 +185,8 @@
         sepalLengthValue.textContent = sepalLength.toFixed(1);
         sepalWidthValue.textContent = sepalWidth.toFixed(1);
 
-        const x = (sepalLength - 4) * 100;
-        const y = 400 - (sepalWidth - 2) * 200;
+        const x = (sepalLength - 4) * 125;
+        const y = 500 - (sepalWidth - 2) * 222.22;
 
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawDecisionRegions();
